2003-10-16  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-dispspec-registry.c

	Applied patch by Boris Goldowsky for bug #121984 (in slightly modified form)

	* cong-dispspec-registry.c

	Fix for bug #121984

	* cong-source-view.c

	Fixed a stupid bug
	
	* plugin-admonition-node-element.c, plugin-admonition-node-element.h, plugin-admonition.c, Makefile.am, cong-app.c, cong-fake-plugin-hooks.h

	New files: custom handling of DocBook admonition tags
	
	* plugin-docbook.c

	Custom property page for DocBook <ulink> tags

2003-10-14  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-labelled.c, cong-editor-area-labelled.h, Makefile.am, plugin-lists-area-listitem.c, plugin-lists-area-listitem.h

	Refactored CongEditorAreaListitem into a new CongEditorAreaLabelled class
	
	* plugin-lists-node-element-listitem.c, plugin-lists-node-element-listitem.h

	Fix for bug #122365 (updates for labels in listitem plugin)
	
	* cong-parser-error.c, cong-parser-error.h

	Support for parsing from a libxml2 URI

	* cong-editor-node-text.c, cong-file-properties.c, cong-primary-window.c, cursor.c, plugin-cleanup-source.c, popup.c

	Fixed some warnings and removed dead code

2003-10-13  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-node.c

	Added assertions to trap missing method handling implementations

	* cong-dispspec-registry.c, cong-document.c, cong-error-dialog.h, cong-error-file-open.c, cong-error-file-save.c, cong-error-tests.c, cong-file-open.c, cong-parser-error.c, cong-parser-error.h, cong-plugin.c, cong-plugin.h, cong-vfs.c, cong-vfs.h, plugin-convert-case.c

	Removed lots of GnomeVFS URI objects; replaced with stringified URIs

2003-10-11  Geert Stappers <stappers@stappers.nl>

	* Makefile.am, cong-app.c, cong-file-import.c, cong-menus.c
	and plugin-docbook.
	Use pkgdatadir instead of datadir.

2003-10-10  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-widget3.c, cong-node.c

	Fixes for bug #124011 (entity ref children)
