@@ -41,6 +41,10 @@ struct CongEditorAreaUnknownTagDetails
 };
 
 /* Method implementation prototypes: */
+static void 
+render_self (CongEditorArea *area,
+	     const GdkRectangle *widget_rect);
+
 static gint
 calc_requisition (CongEditorArea *area, 
 		  GtkOrientation orientation,
@@ -70,6 +74,7 @@ cong_editor_area_unknown_tag_class_init (CongEditorAreaUnknownTagClass *klass)
 	CongEditorAreaClass *area_klass = CONG_EDITOR_AREA_CLASS(klass);
 	CongEditorAreaContainerClass *container_klass = CONG_EDITOR_AREA_CONTAINER_CLASS(klass);
 
+	area_klass->render_self = render_self;
 	area_klass->calc_requisition = calc_requisition;
 	area_klass->allocate_child_space = allocate_child_space;
 	area_klass->for_all = for_all;
@@ -174,6 +179,19 @@ cong_editor_area_unknown_tag_new (CongEditorWidget3 *editor_widget,
 }
 
 /* Method implementation definitions: */
+static void 
+render_self (CongEditorArea *area,
+	     const GdkRectangle *widget_rect)
+{
+	switch (cong_editor_area_get_state (area)) {
+	default: break;
+	case CONG_EDITOR_STATE_PREHIGHLIGHT: 
+		cong_editor_area_debug_render_area (area,
+						    cong_editor_widget3_get_test_gc (cong_editor_area_get_widget (area)));
+		break;
+	}
+}
+
 static gint
 calc_requisition (CongEditorArea *area, 
 		  GtkOrientation orientation,
