@@ -110,6 +110,13 @@ cong_editor_area_show (CongEditorArea *area);
 void
 cong_editor_area_hide (CongEditorArea *area);
 
+enum CongEditorState
+cong_editor_area_get_state (CongEditorArea *editor_area);
+
+void
+cong_editor_area_set_state (CongEditorArea *editor_area,
+			    enum CongEditorState state);
+
 const GdkRectangle*
 cong_editor_area_get_window_coords (CongEditorArea *area);
 
