@@ -38,7 +38,6 @@ G_BEGIN_DECLS
 
 typedef struct CongEditorNodeDetails CongEditorNodeDetails;
 
-
 /**
  * CongEditorNode
  * 
@@ -112,6 +111,13 @@ cong_editor_node_get_node (CongEditorNode *editor_node);
 
 CongEditorNode*
 cong_editor_node_get_traversal_parent (CongEditorNode *editor_node);
+
+enum CongEditorState
+cong_editor_node_get_state (CongEditorNode *editor_node);
+
+void
+cong_editor_node_set_state (CongEditorNode *editor_node,
+			    enum CongEditorState state);
 
 /* 
    Simplistic node->area interface (1-1 for now).
