@@ -126,4 +126,12 @@ render_self (CongEditorArea *area,
 			    rect->y+2,
 			    rect->width-3,
 			    rect->height-3);
+
+	switch (cong_editor_area_get_state (area)) {
+	default: break;
+	case CONG_EDITOR_STATE_PREHIGHLIGHT: 
+		cong_editor_area_debug_render_area (area,
+						    cong_editor_widget3_get_test_gc (cong_editor_area_get_widget (area)));
+		break;
+	}
 }
